typescript/checker/tests/conformance/es6/templates/templateStringUnterminated3.ts.stderr
error: Unterminated template
 --> $DIR/tests/conformance/es6/templates/templateStringUnterminated3.ts:2:1
  |
2 | `\\
  | ^^^

